<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="18dp"
    android:paddingEnd="18dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="@drawable/login_con_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:background="@drawable/login_field_bg">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/login_phone"
            android:layout_gravity="center"/>
        <net.xiguo.test.widget.EditTextWithClear
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"
            android:id="@+id/userName"
            android:hint="@string/loginabelUsername"
            android:gravity="center_vertical"
            android:textColor="@color/loginBg"
            android:textColorHint="@color/loginHint"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="11"
            android:inputType="phone"
            android:digits="@string/phoneNum">
        </net.xiguo.test.widget.EditTextWithClear>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:background="@drawable/login_field_bg">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/login_pass"
            android:layout_gravity="center"/>
        <net.xiguo.test.widget.EditTextWithClear
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/userPass"
            android:hint="@string/registerUserpass"
            android:gravity="center_vertical"
            android:textColor="@color/loginBg"
            android:textColorHint="@color/loginHint"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textPassword"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/switchShowPass"
            android:src="@drawable/pass_invisible"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/login_field_bg"
            android:orientation="horizontal"
            android:alpha="0.3"
            android:paddingEnd="14dp"
            android:paddingStart="14dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/phone_valid"
                android:layout_gravity="center"/>
            <net.xiguo.test.widget.EditTextWithClear
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/userValid"
                android:hint="@string/phoneValid"
                android:gravity="center_vertical"
                android:textColor="@color/loginBg"
                android:textColorHint="@color/loginHint"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:enabled="false"
                android:maxLines="1"
                android:maxLength="6"
                android:inputType="number"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:id="@+id/sendValid"
            android:enabled="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/login_valid_bg"
            android:text="@string/sendPhoneValid"
            android:textColor="@drawable/login_button_color"
            android:textSize="13sp" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:id="@+id/register"
        android:enabled="false"
        android:text="@string/registerButton"
        android:textColor="@drawable/login_button_color"
        android:textSize="15sp"
        android:background="@drawable/login_button_bg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerSchema"
        android:textColor="@color/registerSchema"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="@string/registerSchema"/>
</LinearLayout>
